--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     text-decoration: none;
+    list-style: none;
 }
 
 /* HOME */
@@ -36,16 +37,27 @@ nav {
     width: 100%;
 }
 
+.container-links {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.container-links ul {
+    display: flex;
+}
+
 .container-links a {
     font-size: 2em;
     color: white;
+    margin: 0 20px;
+    padding: 10px;
 }
 
 /* CONTEÚDO HOME */
 
 .container-section {
     display: flex;
-    height: 80vh;
+    height: 100vh;
     align-items: center;
     justify-content: space-around;
     background-color: #ff914d;
@@ -53,7 +65,7 @@ nav {
 }
 
 #logo-conteudo {
-    width: 50%;
+    width: 40%;
 }
 
 #conteudo-home {
@@ -61,7 +73,7 @@ nav {
     width: 40%;
     display: flex;
     align-items: center;
-    font-size: 1.2em;
+    font-size: 1.4em;
 }
 
 #container-center {
@@ -86,6 +98,34 @@ nav {
     text-align: center;
 }
 
+#section-bottom {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #ff914d;
+    color: white;
+}
+
+
+
+#container-bottom {
+    height: 50%;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+}
+
+#img-pessoa {
+    width: 70%;
+}
+
+#contaudo-section-botton {
+    height: 30%;
+    width: 50%;
+    text-align: center;
+}
 
 
 footer {
