--- a/quem-somos.css
+++ b/quem-somos.css
@@ -62,12 +62,23 @@ nav {
 
 /* MAIN QUEM SOMOS */
 
+#main-sobre {
+    background-color: #ff914d;
+}
+
+#main-sobre h1, h2 {
+    text-align: center;
+    color: white;
+    font-size: 4em;
+    margin: 0 0 1em 0;
+}
+
 .section-sobre {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     height: 100vh;
-    background-color: #ff914d;
+    /* background-color: #ff914d; */
 }
 
 .section-sobre div {
@@ -76,11 +87,58 @@ nav {
     align-items: center;
     width: 40%;
     height: 70%;
-    background-color: #fff;
+    /* background-color: #fff; */
 }
 
 #box-1-section-sobre {
-    background-image: url(/epps-landing-page1/img/img-section1-sobre.jpg)}
+    border-radius: 10px;
+}
+
+#box-1-section-sobre h2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* color: #ff914d; */
+    color: white;
+    font-size: 5em;
+}
+
+#box-2-section-sobre {
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    text-align: center;
+    color: white;
+    font-size: 1.3em
+}
+
+#box-3-section-sobre-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: center;
+    height: 80%;
+    color: white;
+    font-size: 1.3em
+}
+
+#box-3-section-sobre-2 h3 {
+    margin-top: 10px;
+}
+
+#box-1-section-sobre {
+    background-image: url(./img/img-section1-sobre.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#box-2-section-sobre-2 {
+    background-image: url(./img/cartão.png);
+    background-image: cover;
+    background-repeat: no-repeat;
+}
+
+
 
 /* FOOTER QUEM SOMOS*/
 
