--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@
     padding: 0;
     text-decoration: none;
     list-style: none;
+    font-family: 'Roboto', sans-serif;
 }
 
 /* ESTILOS GERAIS */
