Deixei a página do quem somos responsiva para tablets e telemóveis. Também alterei o css da página home, apara alinha com a do quem somos. Com isso, fica faltando apenas resolver as pendências da página de produtos.

--- a/index.css
+++ b/index.css
@@ -205,6 +205,13 @@ footer div{
         align-items: center;
     }
 
+    .logo {
+        height: 20vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
     /* MAIN */
 
     #section-above-all {
