--- a/index.css
+++ b/index.css
@@ -155,6 +155,11 @@ nav {
     border-radius: 10px;
 }
 
+.box-link:hover {
+    transform: scale(1.2);
+    transition: 1s;
+}
+
 .box-link a {
     color: #ff914d;
     font-weight: 600;
