--- a/produtos.css
+++ b/produtos.css
@@ -3,6 +3,18 @@
     padding: 0;
     text-decoration: none;
     list-style: none;
+    font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
+}
+
+/* ESTILOS GERAIS */
+
+img {
+    border-radius: 10px;
+}
+
+body {
+    background-color: #ff914d;
 }
 
 /* HOME */
@@ -13,7 +25,6 @@ header {
     display: flex;
     justify-content: center;
     height: 20vh;
-    background-color: #ff914d;
 }
 
 nav {
@@ -25,10 +36,6 @@ nav {
 
 #img-logo {
     height: 20vh;
-}
-
-.logo {
-    height: 100%;
 }
 
 .logo a {
@@ -76,15 +83,48 @@ nav {
 
 #conteudo2-home {
     width: 25%;
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
     font-size: 1.4em;
-    margin: 0 20px;    
+    margin: 0 20px;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: white;
+    color: #ff914d;
 }
 
 .adquirir-form{
-    width: 50%;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    margin-top: 30px;  
+    margin: 20px 0;
+}
+
+.adquirir-form input[type=text]{
+    border: none;
+    outline: none;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.123);
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+.adquirir-form input:focus{
+    border-bottom: 2px solid rgba(0, 0, 0, 0.5);    
+}
+
+.adquirir-form button[type=button]{
+    width: 50%;
+    padding: 10px 0;
+    border-radius: 5px;
+    border: 2px solid rgba(0, 0, 0, 0.5);
+    outline: none;
+}
+
+.adquirir-form button:active{
+    border: 2px solid rgba(0, 0, 0, 1);
 }
 
 #container-center {
