--- a/index.css
+++ b/index.css
@@ -324,6 +324,8 @@ footer div{
 
     .container-links ul {
         width: 100%;
+        display: flex;
+        justify-content: center;
     }
 
     /* MAIN */
