--- a/produtos.css
+++ b/produtos.css
@@ -66,7 +66,6 @@ nav {
     height: 100vh;
     align-items: center;
     justify-content: space-between;
-    background-color: #ff914d;
     color: white;
 }
 
@@ -204,3 +203,70 @@ footer div{
     align-items: center;
     justify-content: space-evenly;
 }
+
+@media screen and (min-device-width : 421px) and (max-device-width : 800px) {
+    
+    /* HEADER */
+
+    header {
+        height: 30vh;
+        margin-bottom: 50px;
+    }
+
+    nav {
+        display: flex;
+        width: 100%;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .logo {
+        height: 20vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    /* MAIN */
+
+    .container-section {
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+    } 
+    
+    #app-background{
+       background-size: auto; 
+    }
+    
+    #conteudo1-home {
+        width: 50%;
+    }
+
+    #conteudo2-home {
+        width: 50%;
+        justify-content: ;
+        margin-top: 20px;
+        padding: 0 10px;
+    }
+
+    .adquirir-form{
+        
+    }
+
+
+
+    /* FOOTER */
+
+    .container-list-footer ul {
+        display: flex;
+        width: 100%;
+        align-items: center;
+    }
+
+    footer div{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
