Alterado o comentario HEADER para header em produtos.css

--- a/produtos.css
+++ b/produtos.css
@@ -206,7 +206,7 @@ footer div{
 
 @media screen and (min-device-width : 421px) and (max-device-width : 800px) {
     
-    /* HEADER */
+    /* header */
 
     header {
         height: 30vh;
