--- a/produtos.css
+++ b/produtos.css
@@ -78,6 +78,7 @@ nav {
     width: 25%;
     font-size: 1.4em;
     margin: 0 20px;
+    text-align: center;
 }
 
 #conteudo2-home {
@@ -89,7 +90,7 @@ nav {
     align-items: center;
     font-size: 1.4em;
     margin: 0 20px;
-    padding: 10px;
+    padding: 25px;
     border-radius: 10px;
     background-color: white;
     color: #ff914d;
@@ -97,9 +98,10 @@ nav {
 
 .adquirir-form{
     width: 100%;
+    height: 50%;
     display: flex;
     flex-direction: column;
-    margin: 20px 0;
+    justify-content: space-around;
 }
 
 .adquirir-form input[type=text]{
@@ -124,12 +126,6 @@ nav {
 
 .adquirir-form button:active{
     border: 2px solid rgba(0, 0, 0, 1);
-}
-
-#container-center {
-    width: 50%;
-    display: flex;
-    justify-content: center;
 }
 
 #img-main {
@@ -204,9 +200,12 @@ footer div{
     justify-content: space-evenly;
 }
 
+
+/* Responsividade */
+
 @media screen and (min-device-width : 421px) and (max-device-width : 800px) {
     
-    /* header */
+    /* HEADER */
 
     header {
         height: 30vh;
@@ -233,7 +232,7 @@ footer div{
     .container-section {
         flex-direction: column;
         align-items: flex-start;
-        justify-content: center;
+        justify-content: space-evenly;
     } 
     
     #app-background{
@@ -246,10 +245,99 @@ footer div{
 
     #conteudo2-home {
         width: 50%;
-        /* justify-content: ; */
-        margin-top: 20px;
         padding: 0 10px;
     } 
+        
+    #img-main {
+        background-size: 150vh;
+    }
+
+    #section-bottom{
+        justify-content: space-around;
+    }
+
+    #container-bottom {
+        width: 100%;
+    }
+    
+    /* FOOTER */
+
+    .container-list-footer ul {
+        display: flex;
+        width: 100%;
+        align-items: center;
+    }
+
+    footer div{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+}
+
+@media screen and (min-device-width : 320px) and (max-device-width : 420px) {
+     
+    /* HEADER */
+
+     header {
+        height: 30vh;
+        margin-bottom: 50px;
+    }
+
+    nav {
+        display: flex;
+        width: 100%;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .logo {
+        height: 20vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    /* MAIN */
+
+    .container-section {
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        padding: 20px;
+    } 
+
+    #app-background{
+        background-image: url(./img/super-app-banco.png);
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+
+    #conteudo1-home {
+        width: 100%;
+    }
+
+    #conteudo2-home {
+        width: 100%;
+    }
+
+    #img-main {
+        background-image: url(./img/cartão.png);
+    }
+
+    #section-bottom{
+        height: 100vh;
+        justify-content: space-around;
+    }
+
+    #container-bottom{
+        width: 90vh;        
+    }
+    
+    #conteudo-section-botton{
+        width: 90vw;
+    }
 
     /* FOOTER */
 
@@ -264,4 +352,5 @@ footer div{
         justify-content: center;
         width: 100%;
     }
+
 }
