--- a/produtos.css
+++ b/produtos.css
@@ -310,8 +310,7 @@ footer div{
 
     #app-background{
         background-image: url(./img/super-app-banco.png);
-        background-size: contain;
-        background-repeat: no-repeat;
+        background-size: cover;
     }
 
     #conteudo1-home {
@@ -324,8 +323,15 @@ footer div{
 
     #img-main {
         background-image: url(./img/cartão.png);
+        background-size: cover; 
     }
 
+    .conteudo-h2{
+        height: 100%;
+        flex-direction: column;
+        align-items: center;
+    }
+   
     #section-bottom{
         height: 100vh;
         justify-content: space-around;
