--- a/produtos.css
+++ b/produtos.css
@@ -146,9 +146,9 @@ nav {
 }
 
 #section-bottom {
+    height: 100vh;
     display: flex;
     flex-direction: column;
-    height: 100vh;
     align-items: center;
     justify-content: space-between;
     background-color: white;
@@ -236,15 +236,17 @@ footer div{
     } 
     
     #app-background{
-       background-size: auto; 
+       background-size: auto;
     }
     
     #conteudo1-home {
         width: 50%;
+        margin: 50px;
     }
 
     #conteudo2-home {
         width: 50%;
+        margin: 50px;
         padding: 0 10px;
     } 
         
@@ -257,7 +259,11 @@ footer div{
     }
 
     #container-bottom {
-        width: 100%;
+        /* width: 100%; */
+    }
+
+    #conteudo-section-botton{
+        width: 90%;
     }
     
     /* FOOTER */
@@ -310,41 +316,48 @@ footer div{
 
     #app-background{
         background-image: url(./img/super-app-banco.png);
-        background-size: cover;
+        /* background-size: 100%;
+        background-repeat: no-repeat; */
     }
 
     #conteudo1-home {
         width: 100%;
+        font-size: 1.2em;
     }
 
     #conteudo2-home {
         width: 100%;
+        height: 40%;
     }
 
     #img-main {
         background-image: url(./img/cartão.png);
-        background-size: cover; 
+        /* background-size: cover;  */
     }
 
-    .conteudo-h2{
-        
+    .conteudo-h2{        
         height: 100%;
         flex-direction: column;
         align-items: center;
+        font-size: 1.4em;
     }
    
     #section-bottom{
         height: 100vh;
+        background-color: #ff914d;
+        color:  white;
         justify-content: space-around;
     }
 
     #container-bottom{
-        width: 50vh;
-        height: 100vw;
+        width: 130vw;
     }
     
     #conteudo-section-botton{
         width: 100%;
+        height: 100%;
+        text-align: center;
+        margin-top: 40px;
     }
 
     /* FOOTER */
